--- a/app/styles/inc/_colors.scss
+++ b/app/styles/inc/_colors.scss
@@ -6,7 +6,10 @@ $success: #00C853;
 $fail: #D50000;
 
 $text-on-dark: #999;
+
 $weapons-background: #ECEFF1;
+$last-match-background: #E8F5E9;
+$stats-background: #E8EAF6;
 
 $header-bg: $main-dark;
 $footer-bg: $main-dark;
