--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,3 +18,5 @@
 @import 'elements/popover';
 @import 'elements/post';
 @import 'elements/tabs';
+@import 'elements/last-match';
+@import 'elements/stats';
