--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,4 +19,5 @@
 @import 'elements/post';
 @import 'elements/tabs';
 @import 'elements/last-match';
+@import 'elements/player-stats';
 @import 'elements/stats';
