--- a/app/styles/elements/_stats.scss
+++ b/app/styles/elements/_stats.scss
@@ -15,3 +15,19 @@
     margin-bottom: 0;
   }
 }
+
+.stat-row:not(:first-child) {
+  margin-top: 1em;
+}
+
+.stat-row__header {
+  margin-top: 1.5em;
+  margin-bottom: -.5em;
+  text-transform: uppercase;
+  color: #999;
+  font-family: 'Roboto Condensed';
+
+  &:first-child {
+    margin-top: 0em;
+  }
+}
