update subdomain, fix mobile tabs and height, fix mobile footer ad height

--- a/app/styles/elements/_footer.scss
+++ b/app/styles/elements/_footer.scss
@@ -3,3 +3,12 @@
   background: $footer-bg;
   color: $text-on-dark;
 }
+
+.ad-sense {
+  padding: 0;
+  margin: 0;
+}
+
+.adsbygoogle {
+  height: 100% !important;
+}
