--- a/app/styles/elements/_player.scss
+++ b/app/styles/elements/_player.scss
@@ -257,3 +257,16 @@
   border-color: #B0BEC5;
   color: #B0BEC5;
 }
+
+ul[rn-carousel] > li {
+  position: relative;
+  margin-left: -100%;
+}
+
+ul[rn-carousel] > li:first-child {
+  margin-left: 0;
+}
+
+ul[rn-carousel] img {
+  max-width: 100%;
+}
