--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,15 +1,23 @@
-<div class="flex-container">
-  <ng-include src="headerPartial"></ng-include>
-  <div class="container flex" ng-if="status">
-    <div class="text-center alert alert-warning">
-      <strong>{{status}}</strong>
+<div class="wrapper">
+  <header>
+    <ng-include src="headerPartial"></ng-include>
+  </header>
+  <div class="content">
+    <div class="container-fluid" ng-if="status">
+      <div class="row">
+        <div class="text-center alert alert-warning">
+          <strong>{{status}}</strong>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid" ng-if="!status">
+      <div class="row">
+        <ng-include src="'views/profile/blog.html'" ng-show="!fireteam[0]"></ng-include>
+        <ng-include src="'views/profile/index.html'" ng-show="fireteam[0]"></ng-include>
+      </div>
     </div>
   </div>
-  <div class="container flex" ng-if="!status">
-    <div class="row">
-      <ng-include src="'views/profile/blog.html'" ng-show="!fireteam[0]"></ng-include>
-      <ng-include src="'views/profile/index.html'" ng-show="fireteam[0]"></ng-include>
-    </div>
-  </div>
-  <ng-include src="footerPartial"></ng-include>
+  <footer>
+    <ng-include src="footerPartial"></ng-include>
+  </footer>
 </div>
