--- a/app/views/shared/profile_header.html
+++ b/app/views/shared/profile_header.html
@@ -1,48 +1,53 @@
-<div class="header b-0 shadow-z-1">
-  <div class="navbar navbar-default bg-darkgray lt b-0 br-0 mb-5" role="navigation">
-    <div class="container-fluid">
-      <div class="row mt-20 mb-20">
-        <div class="visible-xs-block visible-sm-block col-xs-6">
-          <a href="/" target="_self" style="text-decoration:none">
-            <h4 class="text-light logo text-white lato m-0 p-0">
-              <span class="text-lg text-trialsgold">my</span><span class="logo-destiny">Destiny</span><span class="text-trialsgold">Trials</span>Report
-            </h4>
+<div class="header-bar shadow-z-1">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 header-bar__content">
+        <h1 class="main-title">
+          <a href="/" target="_self">
+            <span class="highlight">my.</span>Destiny <span class="highlight">Trials</span> Report
           </a>
+        </h1>
+        <div class="header__actions hidden-xs">
+          <button type="button" class="btn" ng-click="toggleOverlay()" ng-show="fireteam">Help</button>
+          <a type="button" class="btn my-report" href="http://www.destinytrialsreport.com" target="_self"><span class="highlight">trials</span>Report</a>
         </div>
-        <div class="visible-xs-block visible-sm-block col-xs-6 text-right">
-          <a type="button" class="btn btn-darkgray mt-0 b-0" href="http://www.destinytrialsreport.com" target="_self" style="padding-top:3px">
-            <span class="text-trialsgold">trials</span>Report
-          </a>
-        </div>
-        <div class="hidden-xs hidden-sm col-md-3 col-md-offset-1">
-          <a href="/" target="_self" style="text-decoration:none">
-            <h3 class="text-light logo text-white lato m-0 p-0">
-              <span class="text-lg text-trialsgold">my</span><span class="logo-destiny">Destiny</span><span class="text-trialsgold">Trials</span>Report
-            </h3>
-          </a>
-        </div>
-        <div class="col-xs-12 col-md-4">
-          <form ng-submit="searchPlayerbyName(mainPlayer, platformValue, 0, true)">
-            <div class="input-group">
-              <span class="input-group-btn"
-                    data-intro="Toggle between PSN and XBL platforms"
-                    data-position="left"
-                    chardin-show="true">
-                <label class="btn btn-material-grey" ng-model="platformValue" btn-radio="true">PS<span class="hidden-xs">N</span></label>
-                <label class="btn btn-material-grey" ng-model="platformValue" btn-radio="false">XB<span class="hidden-xs">L</span></label>
-              </span>
-              <div class="form-control-wrapper ml-0 mr-0">
-                <input type="text" class="form-control pl-10 pr-10" placeholder="Enter profile name" ng-model="mainPlayer" style="height:34px; z-index:0">
+      </div>
+    </div>
+  </div>
+</div>
+<div class="main-search shadow-z-1">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="main-search__content">
+          <div class="main-search__toggle">
+            <span data-intro="Toggle between PSN and XBL platforms"
+                  data-position="left"
+                  chardin-show="true">
+              <div class="togglebutton">
+                <label>
+                  <label ng-model="platformValue" btn-radio="true">PS<span class="hidden-xs">N</span></label>
+                  <input type="checkbox" ng-model="platformValue" ng-true-value="false" ng-false-value="true">
+                  <label ng-model="platformValue" btn-radio="false">XB<span class="hidden-xs">L</span></label>
+                </label>
               </div>
-              <span class="input-group-btn">
-                <button type="submit" class="btn btn-material-grey" ng-disabled="status">Search</button>
-              </span>
-            </div>
-          </form>
-        </div>
-        <div class="hidden-xs hidden-sm col-md-3 text-right">
-          <button type="button" class="btn btn-material-grey mt-0" ng-click="toggleOverlay()" ng-show="fireteam">Help</button>
-          <a type="button" class="btn btn-darkgray mt-0 b-0" href="http://www.destinytrialsreport.com" target="_self"><span class="text-trialsgold">trials</span>Report</a>
+            </span>
+          </div>
+          <div class="main-search__fireteam">
+            <form ng-submit="searchPlayerbyName(mainPlayer, platformValue, 0, true)">
+              <div class="main-search__row">
+                <div class="main-search__input">
+                  <input type="text" class="form-control" placeholder="Enter profile name" ng-model="mainPlayer" ng-value="fireteam[0].name">
+                </div>
+                <div class="main-search__controls">
+                  <div class="main-search__submit">
+                    <button type="submit" class="hidden-sm hidden-md hidden-lg btn btn-default btn-icon" ng-disabled="status"><i class="material-icons">send</i></button>
+                    <button type="submit" class="hidden-xs btn btn-default btn-raised" ng-disabled="status">Search</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
