--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -1,7 +1,7 @@
 <div class="player shadow-z-1">
   <ng-include src="infoPartial"></ng-include>
 
-  <tabset justified="true" class="player-tabs">
+  <tabset class="player-tabs">
     <tab heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped" class="">
       <ng-include src="'views/fireteam/weapons.html'"></ng-include>
       <ng-include src="'views/fireteam/gear.html'"></ng-include>
