--- a/app/styles/elements/_tabs.scss
+++ b/app/styles/elements/_tabs.scss
@@ -4,9 +4,11 @@
   ul {
     overflow: hidden;
     margin-bottom: -1px;
+    background: #90A4AE;
   }
 
   li {
+    width: 33.33%;
     box-shadow: inset 0px 10px 8px -10px rgba(0,0,0,0.75);
     text-align: center;
     background: #90A4AE;
@@ -21,6 +23,10 @@
       text-transform: uppercase;
       font-family: 'Roboto Condensed';
       transition: box-shadow linear .1s;
+    }
+
+    &:first-child {
+      width: 33.34%;
     }
   }
 
@@ -72,13 +78,4 @@
   .tab-content {
     height: auto;
   }
-}
-
-.nav-tabs.nav-justified > li {
-  width: 33.33%;
-  float: left;
-}
-
-.player-tabs li.active a, .player-tabs li.active a:hover, .player-tabs li.active a:focus {
-  box-shadow: none;
 }
